# VSEngine

./: .gitignore  CMakeLists.txt  Generate.bat  README.md  README.txt  VSEngine.sln  conanfile.txt  main.cpp
Code/: CMakeLists.txt  Entry.cpp
Code/Core/: Engine.cpp  Engine.h
Code/Core/System/: Allocator.cpp  Arena.h  BucketAllocator.cpp  BucketAllocator.h  SmallObjectAllocator.cpp  SmallObjectAllocator.h
Code/ECS/: EntityManager.cpp  EntityManager.h  IComponent.h  Utility.h
Code/ObjectModel/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  Vertex.cpp  Vertex.h
Code/Renderer/: RenderData.cpp  RenderData.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h
Code/ResourceManager/: ResourceManager.cpp  ResourceManager.h
Code/Scene/: Scene.cpp  Scene.h  Utils.cpp  Utils.h
Code/Scene/Components/: Camera.cpp  Camera.h  Light.cpp  Light.h  SceneObject.cpp  SceneObject.h
Code/Shaders/: fragment.fs.glsl  vertex.vs.glsl
Code/Shaders/Light/: Light.vs.glsl
Code/Shaders/Postprocess/: KernelPostprocess.fs.glsl  KernelPostprocess.vs.glsl
Code/Shaders/ScreenQuad/: OnScreenShader.fs.glsl
Code/SpatialSystem/: Octree.cpp  Octree.h
Code/Utils/: Color.cpp  Color.h  CommonUtils.cpp  CommonUtils.h  GeometryUtils.cpp  GeometryUtils.h
Components/: SceneObject.cpp  SceneObject.h
Core/: Engine.cpp  Engine.h
Geometry/: Matrix3df.cpp  Matrix3df.h  Mesh.cpp  Mesh.h  Point2df.cpp  Point2df.h  Point3df.cpp  Point3df.h  Utils.h  Vector3df.cpp  Vector3df.h  Vertex.cpp  Vertex.h
ObjectModel/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshCollection.cpp  MeshCollection.h  Vertex.cpp  Vertex.h
Renderer/: RenderData.cpp  RenderData.h  Renderer.cpp  Renderer.h
Scene/: Scene.cpp  Scene.h  Utils.cpp  Utils.h
Scene/Components/: Camera.cpp  Camera.h  Light.cpp  Light.h  SceneObject.cpp  SceneObject.h  SceneObjectCollection.cpp  SceneObjectCollection.h
Shaders/: Light.fs.glsl  fragment.fs.glsl  vertex.vs.glsl
SpatialSystem/: Octree.cpp
Utils/: Color.cpp  Color.h  CommonUtils.cpp  CommonUtils.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h
VSEngine/: Entry.cpp  Object.cpp  Object.h  VSEngine.props  VSEngine.vcxproj  VSEngine.vcxproj.filters  VSEngine.vcxproj.filters.bak  VSEngine_project_suppressions.cfg
VSGeometry/: VSGeometry.vcxproj  VSGeometry.vcxproj.filters
VSGeometry/Geometry/: Matrix3df.cpp.bak  Point3df.cpp  Utils.cpp  Vector3df.cpp  Vector3df.h
lib/GLFW/Debug/: glfw3.lib
lib/GLFW/Release/: glfw3.lib
